Changes name authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # This file lists all individuals having contributed content to the repository.
 # For how it is generated, see `hack/generate-authors.sh`.
 
-Daniel Chica <1487@holbertonschool.com>
+Deiwin Monsalve <deiwin1987@gmail.com>
 Sammy Guttman <1449@holbertonschool.com>
